# anime_recommender_system_llmops

./: .gitignore  Dockerfile  app.py  main.py  pyproject.toml
config/: config.py
data/: anime_processed.csv
notebook/: scratchpad.ipynb
pipeline/: build_pipeline.py  pipeline.py
src/: dataloader.py  recommender.py  vector_store.py
